fix(instance_overview): layout problems

--- a/src/scss/_custom.scss
+++ b/src/scss/_custom.scss
@@ -24,7 +24,8 @@ $simplevmcolour: #00ADEF;
 }
 
 .instance-card{
-  margin: 10px;
+  margin-top: 10px;
+  margin-bottom:5px;
 }
 
 
